# Verox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  comp  crun.sh  run.sh  temp.vx  test.sh
docs/: grammar.md  syntax.md
src/: arena.hpp  codegen.hpp  compiler.cpp  lexer.hpp  nodes.hpp  parser.hpp  token.hpp  tokens.hpp  type.hpp  userdefined.hpp
